add test img draw
Signed-off-by: requestion <requestion@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
             android:screenOrientation="portrait"
             android:theme="@style/FormImgThem"/>
         <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
+        </activity>
+       <activity
             android:name="com.zbform.penform.activity.SettingActivity"
             android:screenOrientation="portrait"
             android:label="@string/menu_item_setting"
