--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/FormImgThem">
         </activity>
+        <activity
+            android:name="com.zbform.penform.activity.PenManagerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/FormImgThem">
+        </activity>
        <activity
             android:name="com.zbform.penform.activity.SettingActivity"
             android:screenOrientation="portrait"
