--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         <activity
             android:name="com.zbform.penform.activity.FormDrawActivity"
             android:screenOrientation="portrait"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:theme="@style/FormImgThem"/>
         <activity
             android:name="com.zbform.penform.activity.RecordActivity"
