update some theme
Signed-off-by: requestion <requestion@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity android:name="com.zbform.penform.activity.SignInActivity"
             android:label="@string/sign_up_title"
             android:windowSoftInputMode="adjustUnspecified|stateHidden"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:configChanges="orientation|keyboardHidden"
+            android:theme="@style/SignTheme"/>
         <activity
             android:name="com.zbform.penform.appintro.FadeAnimation"
             android:screenOrientation="portrait">
