Add demo License and fix some bug
Signed-off-by: requestion <requestion@163.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.zbform.penform"
+        applicationId "com.zbform.penform.demo" //for demo
+//        applicationId "com.zbform.penform"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
