--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:name="com.zbform.penform.ZBformApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_name_demo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -46,6 +46,7 @@
             android:label="@string/sign_up_title"
             android:windowSoftInputMode="adjustUnspecified|stateHidden"
             android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
             android:theme="@style/SignTheme"/>
         <activity
             android:name="com.zbform.penform.appintro.FadeAnimation"
