新的设置表单
Signed-off-by: requestion <requestion@163.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
         <activity
             android:name="com.zbform.penform.activity.RecordActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:theme="@style/FormImgThem">
         </activity>
         <activity
